Fix overflow on summary

--- a/src/PortfolioPlanning/Components/Plan/PlanTimeline.scss
+++ b/src/PortfolioPlanning/Components/Plan/PlanTimeline.scss
@@ -20,6 +20,10 @@
                 border: none;
             }
         }
+
+        .plan-timeline-zoom-fit-button {
+            flex-shrink: 0;
+        }
     }
 }
 
